# dw

./: .gitignore  Cargo.toml  Directory.Build.props  Dw.sln  Dw.slnx  LICENSE  README.md  RUST_REWRITE.md  VERSION  deps.json  flake.nix  go.mod  go.sum  images.jfif
.github/workflows/: ci.yml  release.yml
.opencode/plans/: 1782135719948-happy-forest.md  1782918356852-cosmic-otter.md
cmd/dw/: main.go
crates/dw-ado/: Cargo.toml
crates/dw-ado-commands/: Cargo.toml
crates/dw-ado-commands/src/: auth.rs  command.rs  completion.rs  lib.rs  output.rs
crates/dw-ado-commands/src/commands/: assigned.rs  changelog.rs  context.rs  mod.rs  project.rs  prs.rs  set_state.rs  work_item.rs
crates/dw-ado-commands/src/output/: assigned.rs  changelog.rs  context.rs
crates/dw-ado/src/: ai_context.rs  auth.rs  auth_browser.rs  changelog.rs  http.rs  json.rs  lib.rs  state.rs  urls.rs  wiql.rs
crates/dw-agent/: Cargo.toml
crates/dw-agent/src/: command.rs  lib.rs
crates/dw-app/: Cargo.toml
crates/dw-app/src/: lib.rs
crates/dw-cli/: Cargo.toml  build.rs
crates/dw-cli-adapter/: Cargo.toml
crates/dw-cli/src/: cli.rs  completion.rs  doctor.rs  guide.rs  handlers.rs  main.rs  upgrade.rs  version.rs
crates/dw-cli/src/completion/: catalog.rs
crates/dw-completion/: Cargo.toml
crates/dw-completion/src/: catalog.rs  lib.rs
crates/dw-config/: Cargo.toml
crates/dw-config/src/: base_dirs.rs  command.rs  completion.rs  doctor.rs  init.rs  init_templates.rs  json.rs  lib.rs  projects.rs  settings.rs  store.rs  types.rs
crates/dw-contracts/: Cargo.toml
crates/dw-core/: Cargo.toml
crates/dw-db/: Cargo.toml
crates/dw-db/src/: collect.rs  commands.rs  completion.rs  config.rs  guard.rs  lib.rs  query.rs  render.rs
crates/dw-doctor/: Cargo.toml
crates/dw-doctor/src/: lib.rs
crates/dw-git/: Cargo.toml
crates/dw-git/src/: lib.rs
crates/dw-process/: Cargo.toml
crates/dw-secret/: Cargo.toml
crates/dw-secret/src/: command.rs  completion.rs  lib.rs
crates/dw-task/: Cargo.toml
crates/dw-task/src/: agent_config.rs  command.rs  completion.rs  doing.rs  finish.rs  lib.rs  lifecycle.rs  open.rs  prune.rs  render.rs  repo.rs  start.rs  validate.rs  work_item.rs
crates/dw-task/src/command/: args.rs
crates/dw-task/src/finish/: render.rs
crates/dw-task/src/open/: render.rs
crates/dw-task/src/repo/: render.rs
crates/dw-task/src/start/: ado.rs  interactive.rs
crates/dw-tui/: Cargo.toml
crates/dw-tui-adapter/: Cargo.toml
crates/dw-tui-adapter/src/: lib.rs  render.rs
crates/dw-tui/src/: actions.rs  app.rs  background.rs  form.rs  history.rs  lib.rs  model.rs  runner.rs  ui.rs  ui_text.rs
crates/dw-ui/: Cargo.toml
crates/dw-ui/src/: ado_changelog.rs  lib.rs
crates/dw-upgrade/: Cargo.toml
crates/dw-upgrade/src/: lib.rs
crates/dw-workspace/: Cargo.toml
crates/dw-workspace/src/: completion.rs  finish.rs  lib.rs  start.rs  templates.rs
docs/architecture/: 000-project-overview.md  001-cli-architecture.md  002-workspaces.md  003-opencode-integration.md  004-azure-devops.md  005-database.md  006-update-system.md  010-command-spec.md  011-rust-rewrite-bootstrap.md  999-implementation-roadmap.md
internal/action/: dispatcher.go  runtime.go  types.go
internal/agent/: agent.go
internal/bootstrap/: bootstrap.go  changelog.go  completion.go  console.go  scoped_ado.go  services.go  tui.go
internal/buildinfo/: buildinfo.go
internal/config/: actions.go  (+11 more)
locales/: active.en.toml  embed.go
rust/: Cargo.toml  README.md  VERSION
rust/.github/workflows/: release.yml
rust/crates/dw-ado/: Cargo.toml
rust/crates/dw-ado-commands/: Cargo.toml
rust/crates/dw-ado-commands/src/: auth.rs  command.rs  completion.rs  lib.rs  output.rs
rust/crates/dw-ado-commands/src/commands/: assigned.rs  changelog.rs  context.rs  project.rs  work_item.rs
rust/crates/dw-ado-commands/src/output/: assigned.rs  changelog.rs  context.rs
rust/crates/dw-ado/src/: auth.rs  auth_browser.rs  changelog.rs  http.rs  lib.rs
rust/crates/dw-agent/: Cargo.toml
rust/crates/dw-agent/src/: command.rs  completion.rs  lib.rs
rust/crates/dw-cli/: Cargo.toml  build.rs
rust/crates/dw-cli/src/: ado.rs  cli.rs  completion.rs  db.rs  doctor.rs  guide.rs  handlers.rs  main.rs  simple_handlers.rs  support.rs  task.rs  upgrade.rs  version.rs
rust/crates/dw-cli/src/ado/: assigned.rs  changelog.rs  context.rs  project.rs  work_item.rs
rust/crates/dw-cli/src/completion/: catalog.rs  values.rs
rust/crates/dw-cli/src/task/: finish.rs  lifecycle.rs  open.rs  prune.rs  repo.rs  start.rs  validate.rs  work_item.rs
rust/crates/dw-config/: Cargo.toml
rust/crates/dw-config/src/: command.rs  completion.rs  doctor.rs  init.rs  init_templates.rs  lib.rs  projects.rs  settings.rs  types.rs
rust/crates/dw-contracts/src/: lib.rs
rust/crates/dw-db/: Cargo.toml
rust/crates/dw-db/src/: command.rs  commands.rs  completion.rs  config.rs  guard.rs  lib.rs  query.rs  render.rs
rust/crates/dw-git/src/: lib.rs
rust/crates/dw-secret/: Cargo.toml
rust/crates/dw-secret/src/: command.rs  completion.rs  lib.rs
rust/crates/dw-task/: Cargo.toml
rust/crates/dw-task/src/: agent_config.rs  command.rs  completion.rs  finish.rs  interactive.rs  lib.rs  lifecycle.rs  open.rs  prune.rs  repo.rs  start.rs  validate.rs  work_item.rs
rust/crates/dw-task/src/command/: args.rs
rust/crates/dw-task/src/finish/: render.rs
rust/crates/dw-task/src/open/: render.rs
rust/crates/dw-task/src/repo/: render.rs
rust/crates/dw-task/src/start/: ado.rs  interactive.rs
rust/crates/dw-ui/: Cargo.toml
rust/crates/dw-ui/src/: lib.rs
rust/crates/dw-workspace/src/: completion.rs  finish.rs  lib.rs  templates.rs
rust/docs/: parity-matrix.md  phase0-plan.md  phase0-results.md
rust/schemas/: databases.schema.json
rust/scripts/: phase0-windows-checklist.ps1  publish-linux-x64.sh  publish-win-x64.ps1  write-release-manifest.sh
schemas/: databases.schema.json  projects.schema.json  release.schema.json  workflow.schema.json
scripts/: install.ps1  install.sh  publish-linux-x64.sh  publish-win-x64.ps1  set-version.sh
(+446 files in other folders)
