[workspace]
members = [
  "crates/dw-agent",
  "crates/dw-cli",
  "crates/dw-config",
  "crates/dw-contracts",
  "crates/dw-ado",
  "crates/dw-ado-commands",
  "crates/dw-db",
  "crates/dw-doctor",
  "crates/dw-git",
  "crates/dw-secret",
  "crates/dw-task",
  "crates/dw-upgrade",
  "crates/dw-workspace",
  "crates/dw-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["dw contributors"]
repository = "https://github.com/sachahjkl/dw"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anstyle = "1"
azure_core = "1.0"
azure_devops_rust_api = { version = "0.38", default-features = true, features = ["wit", "git", "core"] }
msal = "0.8.19"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
inquire = "0.9"
keyring = "4.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
time = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tiny_http = "0.12"
url = "2"
webbrowser = "1"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
