[workspace]
members = [
  "crates/dw-agent",
  "crates/dw-cli",
  "crates/dw-config",
  "crates/dw-contracts",
  "crates/dw-ado",
  "crates/dw-db",
  "crates/dw-git",
  "crates/dw-workspace",
  "crates/dw-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["dw contributors"]
repository = "https://github.com/sachahjkl/dw"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
