[package]
name = "dw-ado-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dw-ado = { path = "../dw-ado" }
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-core = { path = "../dw-core" }
dw-workspace = { path = "../dw-workspace" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
