[package]
name = "dw-ado"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
azure_devops_rust_api.workspace = true
azure_core.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono = "0.4"
dw-contracts = { path = "../dw-contracts" }
dw-core = { path = "../dw-core" }
keyring.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tiny_http.workspace = true
tokio.workspace = true
url.workspace = true
webbrowser.workspace = true
