[package]
name = "dw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-core = { path = "../dw-core" }
dw-process = { path = "../dw-process" }
dw-workspace = { path = "../dw-workspace" }
serde.workspace = true
thiserror.workspace = true
