[package]
name = "dw-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dw-ado-commands = { path = "../dw-ado-commands" }
dw-agent = { path = "../dw-agent" }
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-core = { path = "../dw-core" }
dw-db = { path = "../dw-db" }
dw-doctor = { path = "../dw-doctor" }
dw-secret = { path = "../dw-secret" }
dw-task = { path = "../dw-task" }
dw-upgrade = { path = "../dw-upgrade" }
tokio.workspace = true


[dev-dependencies]
dw-ado = { path = "../dw-ado" }