[package]
name = "dw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dw-ado-commands = { path = "../dw-ado-commands" }
dw-agent = { path = "../dw-agent" }
dw-app = { path = "../dw-app" }
dw-cli-adapter = { path = "../dw-cli-adapter" }
dw-completion = { path = "../dw-completion" }
dw-config = { path = "../dw-config" }
dw-core = { path = "../dw-core" }
dw-db = { path = "../dw-db" }
dw-doctor = { path = "../dw-doctor" }
dw-git = { path = "../dw-git" }
dw-process = { path = "../dw-process" }
dw-secret = { path = "../dw-secret" }
dw-task = { path = "../dw-task" }
dw-tui = { path = "../dw-tui" }
dw-ui = { path = "../dw-ui" }
dw-workspace = { path = "../dw-workspace" }
inquire.workspace = true
indicatif.workspace = true
tokio.workspace = true

[dev-dependencies]
dw-ado = { path = "../dw-ado" }
