[package]
name = "dw-completion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-ui = { path = "../dw-ui" }
dw-workspace = { path = "../dw-workspace" }
serde_json.workspace = true
