[package]
name = "dw-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
dw-ado = { path = "../dw-ado" }
dw-contracts = { path = "../dw-contracts" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
