[package]
name = "dw-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-secret = { path = "../dw-secret" }
dw-ui = { path = "../dw-ui" }
serde.workspace = true
serde_json.workspace = true
tiberius.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
