[package]
name = "dw-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dw-agent = { path = "../dw-agent" }
dw-config = { path = "../dw-config" }
dw-process = { path = "../dw-process" }
serde.workspace = true
