[package]
name = "dw-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
deunicode = "1"
dw-core = { path = "../dw-core" }
serde.workspace = true
thiserror.workspace = true
