[package]
name = "dw-secret"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-core = { path = "../dw-core" }
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
