[package]
name = "dw-task"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dw-ado = { path = "../dw-ado" }
dw-agent = { path = "../dw-agent" }
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-core = { path = "../dw-core" }
dw-git = { path = "../dw-git" }
dw-process = { path = "../dw-process" }
dw-workspace = { path = "../dw-workspace" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
