[package]
name = "dw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
dw-ado = { path = "../dw-ado" }
dw-ado-commands = { path = "../dw-ado-commands" }
dw-agent = { path = "../dw-agent" }
dw-app = { path = "../dw-app" }
dw-config = { path = "../dw-config" }
dw-core = { path = "../dw-core" }
dw-db = { path = "../dw-db" }
dw-doctor = { path = "../dw-doctor" }
dw-process = { path = "../dw-process" }
dw-secret = { path = "../dw-secret" }
dw-task = { path = "../dw-task" }
dw-tui-adapter = { path = "../dw-tui-adapter" }
dw-ui = { path = "../dw-ui" }
dw-workspace = { path = "../dw-workspace" }
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
webbrowser.workspace = true

[dev-dependencies]
tempfile = "3"
