[package]
name = "dw-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anstyle.workspace = true
dw-ado = { path = "../dw-ado" }
dw-ado-commands = { path = "../dw-ado-commands" }
dw-core = { path = "../dw-core" }
