[package]
name = "dw-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dw-ado = { path = "../dw-ado" }
dw-config = { path = "../dw-config" }
dw-core = { path = "../dw-core" }
dw-contracts = { path = "../dw-contracts" }
dw-git = { path = "../dw-git" }
dw-process = { path = "../dw-process" }
dw-secret = { path = "../dw-secret" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
git2.workspace = true
tempfile = "3"
