[package]
name = "dw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dw-config = { path = "../dw-config" }
dw-ui = { path = "../dw-ui" }
serde.workspace = true
thiserror.workspace = true
