[package]
name = "dw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
dw-ado = { path = "../dw-ado" }
dw-agent = { path = "../dw-agent" }
dw-config = { path = "../dw-config" }
dw-contracts = { path = "../dw-contracts" }
dw-db = { path = "../dw-db" }
dw-git = { path = "../dw-git" }
dw-ui = { path = "../dw-ui" }
dw-workspace = { path = "../dw-workspace" }
inquire.workspace = true
msal.workspace = true
serde_json.workspace = true
tokio.workspace = true
