[package]
name = "dw-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dw-config = { path = "../dw-config" }
serde.workspace = true
serde_json.workspace = true
tiberius.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
