[package]
name = "dw-secret"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dw-contracts = { path = "../dw-contracts" }
inquire.workspace = true
keyring.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
