[package]
name = "dw-task"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dw-ado = { path = "../dw-ado" }
dw-agent = { path = "../dw-agent" }
dw-config = { path = "../dw-config" }
dw-git = { path = "../dw-git" }
dw-workspace = { path = "../dw-workspace" }
inquire.workspace = true
serde_json.workspace = true
tokio.workspace = true
